--- a/_posts/2018-07-25-test-post.md
+++ b/_posts/2018-07-25-test-post.md
@@ -2,9 +2,9 @@
 title: "it 카테고리 테스트"
 search: true
 date: 2018-07-25 00:00:00
-categories: 
+categories:
   - it
-  
+
 defaults:
   # _posts
   - scope:
@@ -23,3 +23,4 @@ defaults:
 #### 내용을 작성해보자.
 
 처음으로, 내용을 작성했습니다. Test.
+- Test
