--- a/_posts/2018-07-29-vue-post.md
+++ b/_posts/2018-07-29-vue-post.md
@@ -4,6 +4,10 @@ date: 2018-07-25 14:38:00
 search: true
 categories:
   - vue
+vue_intro_img:
+  - url: /assets/images/vue intro.png
+    image_path: /assets/images/vue intro.png
+    alt: "vue intro"
 
 defaults:
   # _posts
@@ -61,6 +65,11 @@ defaults:
 ? Should we run `npm install` for you after the project has been created? (recommended) npm
 
 명령어를 입력하면, 위와 같은 초기셋팅에 대한 옵션들이 더 나오는데.. 필요한거에 따라 알맞게 구성하면 된다.
+
+구성이 완료되었으면, 실행해 보자
+- cd vue-sample-Project
+- npm run dev
+- 브라우저에서,  http://localhost:8080
 ```
 
-3.
+{% include gallery id="vue_intro_img" %}
