--- a/_posts/2018-08-01-vue-post.md
+++ b/_posts/2018-08-01-vue-post.md
@@ -19,7 +19,7 @@ defaults:
       related: true
 ---
 
-### 컴포넌트 속성(option) - data / props / watch / computed + event bus
+### 컴포넌트 속성(option) - data / props / watch / computed / event bus
 
 - 컴포넌트의 옵션은 문자열, 숫자, 함수, 객체 리터럴 중 하나를 값으로 사용.
 
