--- a/_posts/2018-08-01-vue-post.md
+++ b/_posts/2018-08-01-vue-post.md
@@ -239,3 +239,52 @@ Vue.component('static-component', {
 #### event bus
 - props 또는 event를 통해, 부모-자식 컴포넌트간에 데이터를 주고 받을 수 있는데.. 문제는 단방향이고.. 저 멀리 떨어진 컴포넌트와 통신을 하려면.. 줄기를 쭈욱 타고 가야하는데.. 이것을 해결하기 위해 event bus를 사용한다.
 - 비어있는, Vue 인스턴스를 생성하여 사용
+- 이벤트를 수신하는 컴포넌트는 미리 이벤트 핸들러를 등록($on) : 이를 위해, Vue 생명주기의 created 훅을 이용해 $on을 등록
+
+```
+Single File Component 로 구성된, Vue 프로젝트에서는 EventBus를 어떻게 정의하지?
+
+EventBusExample.js 작성
+/**
+ * eventBus 객체 생성
+ * eventBus 는 비어있는, Vue 인스턴스를 만들어서 사용
+ */
+import Vue from 'vue'
+export const EventBus = new Vue()
+
+
+사용은 매우 간단
+
+서로 통신하고자 하는 컴포넌트에서 정의해서 사용하면 된다.
+
+//보내기
+import {EventBus} from './EventBusExample.js'
+
+sendData: function () {
+      EventBus.$emit('receiveTest', 'Module2에서 보내는 Msg')
+    }
+
+
+//받기
+import {EventBus} from '../../EventBusExample.js'
+
+export default {
+  name: 'Module3',
+  created: function () {
+    EventBus.$on('receiveTest', this.printMsg)
+  },
+  methods: {
+    clickTest: function () {
+      this.$emit('childReceive', this.test)
+    },
+    printMsg: function (msg) {
+      alert(msg)
+    }
+  },
+  props: ['test', 'num']
+}
+
+```
+
+- $on(eventName, value1, ..) : 이벤트 감지
+- $emit(eventName, callback()) : 이벤트 트리거
