--- a/_posts/2018-08-13-blog-post.md
+++ b/_posts/2018-08-13-blog-post.md
@@ -94,4 +94,12 @@ new Promise((resolve, reject) => {
 .catch()
 를 이용하면 됩니다.
 
+.then((result) => {
+    //result는 resolve() 결과가.. resolve(1) -> result = 1
+})
+
+.catch((err) => {
+
+  })
+
 ```
