--- a/_posts/2018-09-13-vue6-post.md
+++ b/_posts/2018-09-13-vue6-post.md
@@ -144,4 +144,25 @@ this.$store.commit('addCountNum');
 
 
 - Vuex 상태 변경2(actions / 액션)
+상태값으로 특정 작업을 실행하는 로직을 포함. 로직을 마무리하면, 변이 메서드(mutations) 호출을 포함.
+변이메서드를 통해, 상태값 추적이 가능.
+context 객체는 저장소 객체와 같은 의미.
+다음과 같은 속성이 있음
+state
+commit
+dispatch
+getters
+rootState
+rootGetters
+
+actions 에 정의된 메서드는 dispatch 메서드로 호출 / 추가 인자를 넘길수도 있다.
+this.$store.dispatch('addCount');
+
+
+..
+여기서 보면, actions / mutations 이 비슷한 역할을 하는거 같은데 무엇으로 구분해야하나?
+Mutations 는 동기적 로직을 정의(이녀석 역할 자체가 state 관리가 메인 / 비동기 처리 시, 변경 파악이 어려움)
+Actions 는 비동기적 로직을 정의
+
+
 ```
