--- a/_posts/2018-09-18-vue7-post.md
+++ b/_posts/2018-09-18-vue7-post.md
@@ -157,4 +157,15 @@ this.$store.commit('increment2')
 
 위와 같이 사용하면, 접근이 가능하다.
 
+* 선언한 상태, 변이 메서드는 store 객체에서 처음부터 하나의 저장소 객체로 선언된 것처럼 사용할 수 있다.
+
+
+```
+
+#### Vuex Module 속성 이름 관리
+```
+- 모듈을 사용해, 저장소를 구성하면 설장한 속성 이름이 모두 달라야함.
+- Vuex 가 지역저장소 모든 속성을 Vuex의 전역으로 등록하기 때문.
+- 이를 위해, 이름을 접두사 / 접미사를 포함해 상수로 정의하는 것을 권장
+
 ```
