--- a/_posts/2018-09-18-vue7-post.md
+++ b/_posts/2018-09-18-vue7-post.md
@@ -168,4 +168,66 @@ this.$store.commit('increment2')
 - Vuex 가 지역저장소 모든 속성을 Vuex의 전역으로 등록하기 때문.
 - 이를 위해, 이름을 접두사 / 접미사를 포함해 상수로 정의하는 것을 권장
 
+
+
+namespace 같이 옵션을 주는 방식도 있는데, 일단 패스.
+
+
+export const types = {
+  getters: {
+    GET_STATE_C_NUM: 'GET_STATE_C_NUM'
+  }
+}
+
+
+import {types} from './types/modueCTypes' // types 선언
+const GET_C_NUM = 'c/GET_C_NUM'
+const INCREMENT_C_NUM = 'c/C_INCREMENT'
+
+const moduleC = {
+  state: {
+    todos: [{cNum: 10000}]
+  },
+  mutations: {
+    [INCREMENT_C_NUM]: function (state) {
+      state.todos[0].cNum += 100
+    }
+  },
+  getters: {
+    [GET_C_NUM]: function (state) {
+      // getters['c/GET_C_NUM']
+      return state.todos[0].cNum
+    },
+    [types.getters.GET_STATE_C_NUM]: (state) => {
+      return state.todos[0].cNum
+    }
+  }
+}
+
+export default moduleC
+
+나는 위와 같은 방식으로 이용하였다. 사용할 때는
+import { mapGetters, mapMutations, mapActions, mapState } from 'vuex'
+Vuex 에 내장된 helper 함수를 사용했다.
+
+{{ parentCounter }}
+mapGetters({
+  parentCounter : 'getCounter' // getCounter 는 Vuex 의 getters 에 선언된 속성 이름
+})
+
+{{ getCounter }}
+mapGetters([
+ 'getCounter'
+])
+
+위의 헬퍼 함수를 사용할 때, ES6의 ... (전개) 연산자를 사용한다.
+
+computed 속성 - {}
+mapGetters
+mapState
+
+methods 속성 - {}
+mapMutations
+mapActions
+
 ```
