--- a/_posts/2018-09-18-vue7-post.md
+++ b/_posts/2018-09-18-vue7-post.md
@@ -230,4 +230,118 @@ methods 속성 - {}
 mapMutations
 mapActions
 
+------
+
+<template>
+  <div>
+    <p><router-link to="/">Go to First Page</router-link></p>
+    <p>moduleA : {{getNum}}</p>
+    <p>moduleB : {{getNum2}}</p>
+    <p>moduleC : {{getCNum}}</p>
+    <p>moduleC(types 로 속성값을 관리하는 방식) : {{this.test}}</p>
+    <button @click="incrementNumA">+ 증가(a 모듈)</button>
+    <button @click="incrementNumB">+ 증가(b 모듈)</button>
+    <button @click="incrementNumC">+ 증가(C 모듈)</button>
+    <hr>
+    <ul>
+      <li v-for="(item, index) in todos" v-if="item.done" :key="item.text" @click="toggleTest(index)">{{ item.text }}</li>
+    </ul>
+  </div>
+</template>
+
+<script>
+import { mapGetters, mapMutations, mapActions, mapState } from 'vuex'
+import {types} from '../../store_modules/types/modueCTypes'
+
+export default {
+  name: 'vuexModule',
+  computed: {
+    ...mapGetters(['todos/DONE_COUNT']),
+    ...mapState({
+      todos: (state) => state.todo.todos
+    }),
+    ...mapGetters({getNum: 'getNum', getNum2: 'getNum2', getCNum: 'c/GET_C_NUM', test: types.getters.GET_STATE_C_NUM})
+  },
+  methods: {
+    ...mapMutations({incrementC: 'c/C_INCREMENT'}),
+    ...mapActions({fetchTest: 'todos/FETCH_ALL'}),
+    incrementNumA () {
+      console.log(this.$store)
+      this.$store.commit('increment')
+    },
+    incrementNumB () {
+      this.$store.commit('increment2')
+    },
+    incrementNumC () {
+      this.incrementC()
+    },
+    toggleTest (index) {
+      console.log(index)
+      this.fetchTest({index: index, done: false})
+    }
+  }
+}
+</script>
+
+<style scoped>
+
+</style>
+
+store.js
+
+import Vue from 'vue'
+import Vuex from 'vuex'
+import {moduleA} from './store_modules/moduleA'
+import {moduleB} from './store_modules/moduleB'
+import moduleC from './store_modules/moduleC'
+import todosModule from './store_modules/todosModule'
+
+Vue.use(Vuex)
+
+export default new Vuex.Store({
+  // modules 추가
+  modules: {
+    a: moduleA,
+    b: moduleB,
+    c: moduleC,
+    todo: todosModule
+  },
+  // countNum 을 state 속성 추가
+  state: {
+    countNum: 0
+  },
+  getters: {
+    getCountNumFromStore: (state) => {
+      return state.countNum
+    }
+  },
+  mutations: {
+    addCountNum: function (state) {
+      state.countNum++
+    },
+    addCountNum2: function (state, payload) {
+      state.countNum += payload.num
+    },
+    subtractionCountNum: function (state) {
+      state.countNum--
+    }
+  },
+  actions: {
+    addCount: function (context) {
+      // commit 의 대상인 addCountNum 는 mutations 의 메서드를 의미한다.
+      return context.commit('addCountNum')
+    },
+    decreaseCount: function (context) {
+      // Promise 객체를 명시적으로 반환하는 액션 메서드
+      return new Promise((resolve, reject) => {
+        resolve()
+        setTimeout(function () {
+          context.commit('subtractionCountNum')
+        }, 1000)
+      })
+    }
+  }
+})
+
+
 ```
